Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -722,7 +722,7 @@ duomenų ir instrukcijų prieigą.
 
 \begin{itemize}
     \item Nei ARMv2, nei Z80000 neturėjo integruotos spartinančiosios atminties.
-    \item Abiejų architektūrų našumas stipriai priklausė nuo pagrindinės
+    \item Abiejų architektūrų našumas priklausė nuo pagrindinės
     operatyviosios atminties greičio.
     \item Išorinė spartinančioji atmintis galėjo būti naudojama tik kaip
     papildomas sistemos sprendimas.
@@ -762,6 +762,54 @@ Z80000 buvo tinkamas tokioms sistemoms dėl savo lanksčios CISC architektūros.
     skaičiavimo sistemoms}.
     \item ARMv2 dažniau sutinkamas buitinėje ir pramoninėje elektronikoje,
     o Z80000 – sudėtingesnėse kompiuterinėse sistemose.
+\end{itemize}
+
+\section{Programinė įranga ir kūrimo įrankiai}
+
+\subsection{ARMv2 programinė įranga}
+
+ARMv2 architektūrai buvo sukurta nemažai programinės įrangos, ypač skirtos
+įterptinėms sistemoms ir asmeniniams kompiuteriams. Plačiausiai žinoma sistema,
+naudojusi ARMv2, buvo \textbf{Acorn Archimedes}, kuriai buvo kuriamos operacinės
+sistemos ir taikomosios programos.
+
+ARMv2 kūrimo įrankiai:
+\begin{itemize}
+    \item Asamblėriai (ARM assembler),
+    \item C kalbos kompiliatoriai,
+    \item Derintojai (debuggeriai),
+    \item Paprasti profiliavimo įrankiai.
+\end{itemize}
+
+Didelė dalis programinės įrangos buvo orientuota į valdymo sistemas,
+grafines vartotojo aplinkas ir edukacines programas.
+
+\subsection{Zilog Z80000 programinė įranga}
+
+Z80000 architektūrai buvo kuriama programinė įranga, skirta sudėtingesnėms
+darbo stotims ir tinklo sistemoms. Buvo bandoma pritaikyti \textbf{Unix tipo
+operacines sistemas}, taip pat kuriamos specializuotos realaus laiko sistemos.
+
+Z80000 kūrimo įrankiai:
+\begin{itemize}
+    \item Asamblėriai (Zilog assembler),
+    \item C ir kitų aukšto lygio kalbų kompiliatoriai,
+    \item Programų derintojai,
+    \item Sistemos testavimo ir diagnostikos įrankiai.
+\end{itemize}
+
+Kadangi Z80000 nebuvo plačiai paplitęs masinėje rinkoje, jo programinės
+įrangos ekosistema liko gana ribota.
+
+\subsection{Palyginimas}
+
+\begin{itemize}
+    \item ARMv2 turėjo \textbf{platesnį programinės įrangos palaikymą},
+    ypač įterptinių sistemų srityje.
+    \item Z80000 programinė įranga buvo labiau orientuota į
+    \textbf{specializuotas ir eksperimentines sistemas}.
+    \item Abiem architektūroms buvo prieinami asamblėriai, C kompiliatoriai
+    ir derinimo įrankiai.
 \end{itemize}
 
 
