Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -853,8 +853,11 @@ o ne realiu emuliavimu.
     emuliatorius.
 \end{itemize}
 
+\section{Naudoti šaltiniai}
 
-
+Šiame darbe naudota informacija buvo surinkta iš techninių gamintojų dokumentacijų,
+Vikipedijos straipsnių, skaitmeninių archyvų ir internetinių šaltinių. Visi šaltiniai
+cituojami Harvardo stiliumi, o pilnas sąrašas pateikiamas žemiau.
 
 
 \bibliographystyle{plain}
