Updates from Overleaf

--- a/bib/refs.bib
+++ b/bib/refs.bib
@@ -22,3 +22,9 @@
   year  = {1988},
   url   = {https://archive.org/details/ArmV2/page/n29/mode/2up},
 }
+@online{ChatGPT2025,
+  author = {{OpenAI}},
+  title  = {ChatGPT: pagalba kuriant ARMv2 ir Z80000 architektūrų palyginimą},
+  year   = {2025},
+  url    = {https://chat.openai.com/},
+}
