--- a/main.tex
+++ b/main.tex
@@ -22,7 +22,7 @@ Kompiuterių architektūrų palyginimas}
 
 \section{Įvadas}
 
-Kompiuterių architektūrų raida ypač suintensyvėjo XX a. devintajame dešimtmetyje,
+Kompiuterių architektūrų raida suintensyvėjo XX a. devintajame dešimtmetyje,
 kai rinkoje pradėjo atsirasti vis daugiau 16 ir 32 bitų mikroprocesorių,
 skirtų tiek asmeniniams kompiuteriams, tiek įterptinėms ir pramoninėms sistemoms.
 Šiuo laikotarpiu formavosi skirtingos architektūrinės kryptys, iš kurių dvi
@@ -33,8 +33,7 @@ ryškiausios buvo RISC (Reduced Instruction Set Computer) ir CISC
 kompiuterių architektūros: \textbf{ARMv2} ir \textbf{Zilog Z80000}. Abi šios
 architektūros buvo kuriamos XX a. pabaigoje ir atspindi skirtingą požiūrį į
 procesoriaus sudėtingumą, našumą ir pritaikymo sritis. ARMv2 yra ankstyvosios
-RISC architektūros pavyzdys, orientuotas į paprastumą ir energijos taupymą,
-tuo tarpu Z80000 atstovauja sudėtingesnei CISC krypčiai, siekusiai didesnio
+RISC architektūros pavyzdys, orientuotas į paprastumą ir energijos taupymą, o Z80000 atstovauja sudėtingesnei CISC krypčiai, siekusiai didesnio
 funkcionalumo vienoje instrukcijoje.
 
 \textbf{Šio darbo tikslas} – palyginti ARMv2 ir Z80000 architektūras, išanalizuoti
@@ -53,12 +52,8 @@ jų pagrindines technines savybes, veikimo principus bei pritaikymo galimybes.
 
 \textbf{Darbo metodai} – techninės dokumentacijos, mokomosios literatūros ir
 internetinių šaltinių analizė bei lyginamoji dviejų architektūrų savybių apžvalga.
-Darbas buvo rengiamas naudojant versijų valdymo sistemą ir \LaTeX{} dokumentų
+Darbas buvo rengiamas naudojant versijų valdymo sistemą GitHub ir Latex dokumentų
 rengimo sistemą.
-
-\textbf{Darbo struktūra} sudaryta iš įvado, teminių skyrių, kuriuose nagrinėjami
-konkretūs architektūrų aspektai, bei baigiama išvadomis ir naudotų šaltinių
-sąrašu.
 
 
 \section{Elementinė bazė ir fizinės savybės}
@@ -258,7 +253,7 @@ atskirti nuo bendrosios paskirties registrų nei ARM architektūroje.
 \subsection{ARMv2 požymių bitai}
 
 ARMv2 architektūroje požymių bitai yra saugomi būsenos registre
-\texttt{CPSR} (Current Program Status Register) \cite{WikiARM}. Šie bitai
+\texttt{CPSR} (Current Program Status Register) \cite{ChatGPT2025}. Šie bitai
 naudojami aritmetinių ir loginių operacijų rezultatams apibūdinti bei
 šakotų komandų vykdymui valdyti.
 
@@ -888,6 +883,18 @@ o ne realiu emuliavimu.
     emuliatorius.
 \end{itemize}
 
+\section{Išvados}
+
+Šiame darbe buvo palygintos dvi to paties laikotarpio architektūros – ARMv2 ir
+Zilog Z80000 – kurios atstovauja skirtingas RISC ir CISC projektavimo filosofijas.
+ARMv2 pasižymėjo paprastumu, dideliu efektyvumu ir mažu energijos
+suvartojimu, todėl buvo plačiai naudojamas įterptinėse sistemose.
+Z80000 buvo sudėtingesnis, lankstesnis ir labiau orientuotas į universalias
+skaičiavimo sistemas su virtualiosios atminties palaikymu.
+Abi architektūros turėjo savų privalumų ir buvo pritaikytos skirtingoms
+naudojimo sritims.
+
+
 \section{Naudoti šaltiniai}
 
 Šiame darbe naudota informacija buvo surinkta iš techninių gamintojų dokumentacijų,
@@ -895,6 +902,6 @@ Vikipedijos straipsnių, skaitmeninių archyvų ir internetinių šaltinių. Vis
 cituojami Harvardo stiliumi, o pilnas sąrašas pateikiamas žemiau.
 
 
-\bibliographystyle{plain}
+\bibliographystyle{apalike}
 \bibliography{bib/refs}
 \end{document}
